# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

load("@datadog-rules-test-optimization-java//:topt_java_test.bzl", "dd_topt_java_test")
load("@test_optimization_data//:export.bzl", "topt_data")

java_library(
    name = "hello_lib",
    srcs = ["com/example/topt/Hello.java"],
)

dd_topt_java_test(
    name = "hello_test",
    srcs = ["com/example/topt/HelloTest.java"],
    agent_jar = "@dd_java_agent//file",
    stage_sources = True,
    test_class = "com.example.topt.HelloTest",
    topt_data = topt_data,
    deps = [":hello_lib"],
)
