load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@datadog-rules-test-optimization-nodejs//:topt_nodejs_test.bzl", "dd_topt_nodejs_test")
load("@test_optimization_data//:export.bzl", "topt_data")

dd_topt_nodejs_test(
    name = "hello_test",
    nodejs_test_rule = js_test,
    topt_data = topt_data,
    module_identifier = "example/nodejs/project",
    entry_point = "smoke_test.js",
    copy_data_to_bin = False,
)
