load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@datadog-rules-test-optimization-nodejs//:topt_nodejs_test.bzl", "dd_topt_nodejs_test")
load("@test_optimization_data//:export.bzl", "topt_data")

dd_topt_nodejs_test(
    name = "hello_test",
    copy_data_to_bin = False,
    entry_point = "smoke_test.js",
    module_identifier = "example/nodejs/project",
    nodejs_test_rule = js_test,
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    topt_data = topt_data,
)
