load("@datadog-rules-test-optimization-python//:topt_py_test.bzl", "dd_topt_py_test")
load("@example_pip//:requirements.bzl", "requirement")
load("@test_optimization_data//:export.bzl", "topt_data")

exports_files(
    [
        "requirements.in",
        "requirements_lock.txt",
    ],
)

py_library(
    name = "hello_lib",
    srcs = ["main.py"],
)

# Unittest-based target: exercises dd_topt_py_test with a custom runner,
# ensuring backwards compatibility for non-pytest workflows.
dd_topt_py_test(
    name = "hello_test",
    srcs = ["main_test.py"],
    imports = ["example/python/project"],
    main = "main_test.py",
    py_test_rule = py_test,
    topt_data = topt_data,
    deps = [":hello_lib"],
)

# Pytest-based target: exercises the streamlined path where dd_topt_py_test
# injects the bundled run_pytest.py runner, PYTEST_ADDOPTS, and default args.
# Windows is excluded until official PyPI wheels are available for ddtrace.
dd_topt_py_test(
    name = "hello_pytest_test",
    srcs = ["pytest_test.py"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    topt_data = topt_data,
    deps = [":hello_lib"] + select({
        # All pip deps are Linux/macOS-only: the lock file has no Windows wheels.
        # The target itself is already marked incompatible with Windows above.
        "@platforms//os:windows": [],
        "//conditions:default": [
            requirement("ddtrace"),
            requirement("pytest"),
        ],
    }),
)
