load("@rules_ruby//ruby:defs.bzl", "rb_test")
load("@datadog-rules-test-optimization-ruby//:topt_ruby_test.bzl", "dd_topt_ruby_test")
load("@test_optimization_data//:export.bzl", "topt_data")

dd_topt_ruby_test(
    name = "hello_test",
    ruby_test_rule = rb_test,
    topt_data = topt_data,
    module_identifier = "apps/ruby/example",
    srcs = ["smoke_test.rb"],
    main = "smoke_test.rb",
)
