load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "capture_lib",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/rules_test_optimization/modules/go/tools/dd_topt_ci_visibility_capture",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "ci_visibility_capture",
    embed = [":capture_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "capture_test",
    srcs = ["main_test.go"],
    embed = [":capture_lib"],
)
